<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.speedometer.SpeedometerFragment"
        android:label="@string/title_home"
        android:fontFamily="@font/montserrat_alternates_bold"
        tools:layout="@layout/fragment_speedometer" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:fontFamily="@font/montserrat_alternates_bold"

        android:name="com.example.myapplication.ui.map.MapFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:fontFamily="@font/montserrat_alternates_bold"

        android:name="com.example.myapplication.ui.trip.TripsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_trips" />
</navigation>