<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.speedometer.SpeedometerFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/secretBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="            "
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:visibility="invisible" />
    <Button
        android:id="@+id/startTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="680dp"
        android:backgroundTint="@color/dark_gray"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/start_trip"
        android:textColor="@color/blackLess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:id="@+id/top2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_below="@+id/top"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_circle_gray" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="73dp"
            android:layout_toEndOf="@+id/speed"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/value"
            android:textColor="@color/more_dark_gray"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="68dp"
            android:fontFamily="@font/montserrat_alternates_extrabold"
            android:text="@string/start_value"
            android:textColor="@color/black"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/montserrat_alternates_extrabold"
            android:text="@string/current_speed"
            android:textColor="@color/black"
            android:textSize="24dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="350dp"
        app:layout_constraintTop_toBottomOf="@+id/top2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"

            app:layout_constraintStart_toEndOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/top2">

            <TextView
                android:id="@id/top3"
                android:layout_width="wrap_content"
                android:layout_height="138dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/rectangle_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/top3"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/average_speed"
                android:textColor="@color/blackLess"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/averageSpeed"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/top3"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="84dp"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/start_value"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="9dp"
                android:layout_marginTop="84dp"
                android:layout_toEndOf="@+id/averageSpeed"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/value"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@+id/top3"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView"
                android:layout_alignTop="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="54dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/time"
                android:textColor="@color/blackLess"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView"
                android:layout_alignEnd="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="53dp"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/start_time_value"
                android:textColor="@color/black"
                android:textSize="25dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top2">

            <TextView
                android:id="@id/top4"
                android:layout_width="wrap_content"
                android:layout_height="138dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/rectangle_gray" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/top4"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/max_speed"
                android:textColor="@color/blackLess"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/maxSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/top4"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="84dp"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:textColor="@color/black"
                android:text="@string/start_value"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentTop="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="84dp"
                android:layout_toEndOf="@+id/maxSpeed"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/value"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView

                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@+id/top4"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView4"
                android:layout_alignTop="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="23dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/distance"
                android:textColor="@color/blackLess"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView4"
                android:layout_alignTop="@+id/textView4"
                android:layout_marginStart="54dp"
                android:layout_marginTop="42dp"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/start_distance_value"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView4"
                android:layout_marginStart="6dp"
                android:layout_marginTop="41dp"
                android:layout_toEndOf="@+id/distance"
                android:fontFamily="@font/montserrat_alternates_extrabold"
                android:text="@string/distance_value"
                android:textColor="@color/black"
                android:textSize="25dp" />

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>